# tessarect-bot

./: .breakpoints  .cache  .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dev.txt  LICENSE  README.md  bank.json  config.py  data.json  data.py  discord_pass.py  load.py  loan.json  logs.txt  lottery.json  main.py  main.sh  mainbank.json  oauth.py  old.txt  perms.py  prefixes.json  pyproject.toml  reaction_roles.json  replit.nix  requirements.txt  streak.json  web.py
.github/ISSUE_TEMPLATE/: FEEDBACK.yml  bug_report.md  support-server-related.md
.github/workflows/: greetings.yml
assets/: button_check.py  funcs.py  get_money.py  misc_checks.py  otp_assets.py  reactor.py  time_calc.py  time_custom.py  time_operations.py
cogs/: Rg.py  addbot.py  ai.py  aki.py  blackjack.py  calc.py  covid.py  dev.py  discorddoc.py  enalevel.py  encyrpted.py  errors.py  fun.py  github.py  giveaway.py  image.py  info.py  insult.py  ip.py  lc.py  level.py  loan.py  logging.py  logs.py  lottery.py  madlibs.py  members.py  misc.py  mod.py  moderation.py  music.py  note.py  owner.py  pypi.py  randomemoji.py  reactionrole.py  reminder.py  remindme.py  restricted.py  security.py  (+19 more)
static/: dash.css  style.css
storage/: emojis.json  errors.json  invite_channels.json  madlibs_channels.json  modlogs_channels.json  todo.json  welcome.json
storage/time_files/: time_offset.json  time_tz.json
templates/: dashboard.html  guilds.html  index.html
text files/: badwords.txt  progress.txt
