[tool.poetry]
name = "repl_python3_Terrasect-new"
version = "0.1.0"
description = ""
authors = ["prakarsh17-coder <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord="^1.7.3"

pyfiglet = "^0.8.post1"
lyrics-extractor = "^3.0.1"
colorama = "^0.4.4"
googletrans = "^3.0.0"
captcha = "^0.3"
jishaku = "^2.3.2"
load = "^2020.12.3"
psutil = "^5.8.0"
motor = "^2.5.0"
pymongo = "^3.12.0"
wikipedia = "^1.4.0"
pyjokes = "^0.6.0"
bs4 = "^0.0.1"
praw = "^7.5.0"
Flask = "^2.0.2"
nest-asyncio = "^1.5.4"
youtube_dl = "^2021.12.17"
Flask-Discord = "^0.1.64"
django-assets-livereload = "^0.3.5"
spotipy = "^2.19.0"
replit = "^3.2.4"
aiosqlite = "^0.17.0"
tasks = "^2.8.0"
dataIO = "^0.0.5"

pytimeparse = "^1.1.8"
tinydb = "^4.5.2"
better-profanity = "^0.7.0"
python-decouple = "^3.5"
qrcode = "^7.3.1"
"dislash.py" = "^1.4.9"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
